--- a/src/_Game/Fxml/Frame.fxml
+++ b/src/_Game/Fxml/Frame.fxml
@@ -103,7 +103,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Text>
-      <Button fx:id="drawPattern" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="769.0" layoutY="730.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Draw">
+      <Button fx:id="drawPattern" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="772.0" layoutY="703.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Generate Board">
          <effect>
             <InnerShadow blurType="ONE_PASS_BOX" />
          </effect>
@@ -115,7 +115,7 @@
             <Image url="@../Pictures/Game-of-Life.png" />
          </image>
       </ImageView>
-      <ChoiceBox fx:id="patternChoiceBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="769.0" layoutY="697.0" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-radius: 3; -fx-border-color: Black;">
+      <ChoiceBox fx:id="patternChoiceBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="772.0" layoutY="730.0" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-radius: 3; -fx-border-color: Black;">
          <effect>
             <InnerShadow blurType="ONE_PASS_BOX" radius="9.2575" width="18.03" />
          </effect>
@@ -131,11 +131,6 @@
                         <MenuItem mnemonicParsing="false" onAction="#openFile" text="Open">
                            <accelerator>
                               <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                           </accelerator>
-                        </MenuItem>
-                        <MenuItem onAction="#saveBoard" text="Save">
-                           <accelerator>
-                              <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator>
                         </MenuItem>
                         <MenuItem onAction="#closeWindow" text="Exit">
